# scrape2md

./: .env.example  .gitignore  LICENSE  README.md  Requirements.txt  config.example.json  example.toml  pyproject.toml  scrape2md.py
configs/: example.toml
scripts/: crawl_site.py
src/scrape2md/: __init__.py  attachments.py  cli.py  config.py  crawl_engine.py  discovery.py  exporter.py  manifest.py  models.py  page_metadata.py  url_mapper.py  utils.py
tests/: conftest.py  test_attachments.py  test_config.py  test_crawl_engine.py  test_discovery.py  test_exporter.py  test_url_mapper.py  test_utils.py
