[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape2md"
version = "0.1.0"
description = "Thin website crawling/export layer for external sites to HTML/Markdown/assets manifests"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "scrape2md maintainers" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.0",
  "chardet>=3.0.2,<6.0.0",
  "crawl4ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
scrape2md = "scrape2md.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
